--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           outputs: |
             dist/github-stats?username=georggunia&theme=fuji
-            dist/github-stats-dark??username=georggunia&theme=fuji
+            dist/github-stats-dark?username=georggunia&theme=fuji
 
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
