--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
         uses: LuciNyan/pixel-profile/action@main
         with:
           outputs: |
-            dist/github-stats?username=georggunia&theme=fuji
-            dist/github-stats-dark?username=georggunia&theme=fuji
+            dist/github-stats?username=georggunia&theme=fuji&include_all_commits=true
+            dist/github-stats-dark?username=georggunia&theme=fuji&include_all_commits=true
 
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
