--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
           outputs: |
             dist/github-stats?username=georggunia&theme=fuji&include_all_commits=true
             dist/github-stats-dark?username=georggunia&theme=fuji&include_all_commits=true
+          crt_outputs: |
+            dist/github-stats-crt?username=georggunia&include_all_commits=true
 
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
