--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,3 +39,23 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # 🔹 NEU: Repository auschecken (für README)
+      - name: checkout repository
+        uses: actions/checkout@v4
+
+            # 🔹 NEU: Cache-Buster in README aktualisieren
+      - name: update README cache buster
+        run: |
+          TS=$(date +%s)
+          sed -i "s/v=[0-9]\+/v=$TS/g" README.md
+
+      # 🔹 NEU: README committen (damit GitHub neu rendert)
+      - name: commit README update
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add README.md
+          git commit -m "chore: refresh README image cache" || echo "No changes"
+          git push
+
